--- a/.env.example
+++ b/.env.example
@@ -1,2 +1,5 @@
 DB_URI=<MongoDB Connection String>
 SECRET_KEY=<JWT secret for signature>
+MAILTRAP_USER=<Your MailTrap user>
+MAILTRAP_PASSWORD=<Your MailTrap password>
+BASE_URL=<Base url>
